Fixed 03-grouping-selectors Finished 04-chaining-selectors

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,11 +1,12 @@
-.one {
-    font-size: 28px;
-    font-family: Helvetica, Times New Roman, sans-serif;
-}
+.one,
 .two {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+.one {
     background-color: black;
     color: rgb(245, 246, 248);
 }
-.three {
+.two {
     background-color: yellow;
 }
